Изменил версию Java обратно из-за проблем с maven.